ingt1/svc-nnnsvs.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-svc
  labels:
    run: mynginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: mynginx
