ingt1/ing-nnning.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    #alb.ingress.kubernetes.io/target-node-labels: eks:cluster-name=SGREKS, type=eks
    #alb.ingress.kubernetes.io/security-groups: alb-sg-ingress
    alb.ingress.kubernetes.io/target-type: ip
  name: mynginx-ingress
  labels:
    run: mynginx
  namespace: nginx
spec:
  ingressClassName: alb
  rules:
  - host:
    http:
       paths:
          - path: /
            pathType: Prefix
            backend:
               service:
                  name: mynginx-svc
                  port: 
                    number: 8080
